@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-13T01:40:52Z",
-  "count_outdated" : 2330,
-  "uniques_outdated" : 533,
+  "timestamp" : "2022-08-13T08:22:25Z",
+  "count_outdated" : 2331,
+  "uniques_outdated" : 534,
   "count" : 2366,
   "uniques" : 556,
   "clones" : [
-    {
-      "timestamp": "2022-07-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-31T00:00:00Z",
       "count": 5,
